package cn.edu.whu.trajspark.database;

import org.apache.hadoop.hbase.client.Table;

/**
 * @author Haocheng Wang
 * Created on 2022/9/28
 */
public class DataSet {
  protected String dataSetName;
  private Table dataSetMetaTable;

}
