package cn.edu.whu.trajspark.query.condition;

/**
 * @author Haocheng Wang
 * Created on 2022/9/28
 */
public class TemporalQueryCondition {
}
